force-app/main/default/objects/OWD_Sharing_Report__c/OWD_Sharing_Report__c.object-meta.xml
<CustomObject>
    <description>It will Store the OWD Sharing Reports Data for User.</description>
    <label>OWD Sharing Report</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OWD Sharing Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>