force-app/main/default/objects/OWD_Sharing_Report__c/fields/List_View_JSON__c.field-meta.xml
<CustomField>
    <fullName>List_View_JSON__c</fullName>
    <description>This field will store all the Data related to List View.</description>
    <label>List View JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>