force-app/main/default/objects/OWD_Sharing_Report__c/fields/Sharing_Rules_Details__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Rules_Details__c</fullName>
    <label>Sharing Rules Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>