force-app/main/default/objects/OWD_Sharing_Report__c/fields/Validation_Rules_JSON__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rules_JSON__c</fullName>
    <label>Validation Rules JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>